# climateguard

./: .gitignore  README.md  app.py  app_ecf.py  gradio_app.py  pyproject.toml  scraped_articles.json  setup.sh
.github/workflows/: deploy-label-misinformation.yml  label-misinformation.yml  test-label-misinformation.yml
climateguard/: clean_text.py  detect_claims.py  enhance_transcripts.py  evaluation.py  models.py  news_scrapper  news_scrapper.py  pipeline.py  test_scaleway.ipynb  transcript_analysis.ipynb
climateguard/domain/: documents.py  prompts.py
climateguard/experiments/: rag_as_classification.py  test_theme_analysis_classify.ipynb  train_cross_encoder_classification.py
climateguard/experiments/claim_extraction/: chat_template.jinja  claim_extraction_test.py  train_extractor_causal_peft.py  train_extractor_causal_peft_dpo.py  train_extractor_seq2seq.py
climateguard/experiments/claim_matching/: cluster_claims_frugal.ipynb  test_claim_matching.ipynb
climateguard/experiments/direct_training/: mistral_chat_template.jinja  qwen2_chat_template.jinja  qwen3_chat_template.jinja  test_api_deployment.py  train.py  train_unsloth.py
climateguard/experiments/nli/: test_nli_climate_check.py  train_cross_encoder_classification.py
climateguard/finetuning/bert/: dev.ipynb  test.ipynb  train.py
climateguard/finetuning/deberta/: default_training_args.py  test.ipynb  train.py
climateguard/finetuning/llms/: chat_templates.py  prompts.py
climateguard/finetuning/modernbert/: test.ipynb  train.py
climateguard/finetuning/setfit/: default_training_args.py  test.ipynb  train.py
climateguard/finetuning/sft/: prepare_training_data.py
climateguard/legacy/: detect_claims.py  evaluation.py  pipeline.py  test.py
climateguard/misinformation_detector/: .env.example  README.md  mise.toml  pyproject.toml
climateguard/misinformation_detector/configs/: evaluate.yaml  evaluate_dev.yaml  finetune_lora.yaml  finetune_lora_dev.yaml  generate_synthetic_data.yaml  generate_synthetic_data_dev.yaml  pretrain_lora.yaml  pretrain_lora_dev.yaml
climateguard/misinformation_detector/src/: evaluate.py  finetune_lora.py  generate_synthetic_data.py  pretrain_lora.py
climateguard/scrapping/: pipeline.py
climateguard/usecase/: pipeline.py
climateguard/utils/: llamaindex.py
data/: analyze_false_positives.ipynb  analyze_huggingface_dataset.ipynb  analyze_tp_fp_themes.ipynb  update_huggingface_dataset.ipynb  update_huggingface_dataset.py
data/benchmark/: cards_sample_1000.csv  cards_sample_600.csv  mediatree_synthetic_sample_1000.csv  mediatree_test.csv  mediatree_train.csv
data/charlotte/: test_77.csv  train_227.csv
data/experiments/label_studio_review/: label_studio_interface.xml  mediatree_predictions_07_2024_label_studio_review.json  sud_radio_itele_since_2024_07_label_studio_review.json
data/exploration/: cards-fever_to_label.csv  desmog.csv  desmog_quotes.csv
data/scraped_articles/: nra_la_notheme_processed.csv
data/test_claims_detection/: europe_1_chateau_versailles_transcript_ok.json  france_bleu_transcript_legislatives_not_ok.json  youtube_transcript_raptor_not_ok.csv
deployments/: docker-compose.yaml  request.py  server.py
deployments/caddy/: Caddyfile
deployments/labelstudio/: france.interface.xml  interface.xml
infrastructure/: .env.dist  Makefile  Readme.md
infrastructure/climate/dev/: container.tf  main.tf  variables.tf
infrastructure/climate/environments/: .env.secrets.dist
infrastructure/dev/: container.tf  database.tf  job.tf  main.tf  s3.tf  secrets.tf  variables.tf
infrastructure/modules/common/: grafana.tf  main.tf  secrets.tf  variables.tf
infrastructure/modules/country/: container.tf  database.tf  job.tf  main.tf  s3.tf  secrets.tf  variables.tf
infrastructure/projects/: .terraform.lock.hcl  main.tf
jobs/: README.md
jobs/get_audio_video/: Dockerfile  docker-compose.yml  get_audio_video.py  requirements.txt
jobs/label-misinformation/: .bumpversion.cfg  Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt  s3_utils.py
jobs/label_misinformation/: .bumpversion.cfg  .dockerignore  Dockerfile  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
legacy_apps/: live_detect.py
legacy_apps/climateguard/: gdelt_scrapper.py
notebooks/: Data - Download Mediatree data.ipynb  Data - Post-processing.ipynb  reprocessed_analysis.ipynb  test_claims_detection.ipynb  test_qc.csv
notebooks/benchmark/: benchmark.ipynb  cards_benchmark.ipynb  cards_benchmark_eda.ipynb  cards_eda.ipynb  clean_text.ipynb  clean_text_TEST.ipynb  concatenate_mediatree_csv_files.ipynb  corrected.pickle  diff.html  evaluate_classifier.ipynb  gold_dataset_creation.ipynb  mediatree_benchmark.ipynb  mediatree_synthetic_benchmark.ipynb
notebooks/cards/: cards.ipynb
notebooks/desmog/: desmog_scrapper.ipynb  desmog_scrapper.py
notebooks/experiments/: agentic_rag.ipynb  bespoke_mini_factchecker.ipynb  better_cards_classifier_december.ipynb  dataset_exploration.ipynb  desmog_analysis.ipynb  desmog_classif.ipynb  desmog_scrapper.ipynb  desmog_scrapper.py  enhanced_transcripts.ipynb  evaluate_llama.ipynb  excel_deliverable_december.ipynb  label_studio_review.ipynb  llm_graph.ipynb  mediatree_metrics.ipynb  mediatree_multi_prompt_classification.ipynb  mediatree_multi_prompt_prediction.ipynb  mediatree_multi_prompt_prediction_batch.ipynb  mediatree_single_prompt_prediction.ipynb  multi_prompt_classification.ipynb  prompt_engineering_model_contest.ipynb  rag_baseline.ipynb  reformulation_text_clean.ipynb  test.ipynb  thinkyoung_ecf.ipynb  thinkyoung_review.ipynb  translate_excel_to_label_studio_tasks.ipynb
notebooks/hackathon_ecf/: estimate_cost.ipynb
notebooks/hackathon_thinkyoung/: Data - Download Mediatree data.ipynb  Data - Post-processing.ipynb  Sandbox hackathon detection.ipynb  Test sudradio.ipynb
notebooks/latvia/: focus_nra_la.ipynb  scrap_LSM.ipynb  scrape GDELT api.ipynb  transcript_analysis_economics.ipynb
notebooks/open_source/: explore_models.ipynb
notebooks/slm/: cards.ipynb  claim_classification.ipynb  get_data.ipynb
(+102 files in other folders)
