[project]
name = "climate_guard"
version = "0.1.0"
description = "A web scraper for Latvian news articles"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
dependencies = [
    "gradio>=4.44.1",
    "python-dotenv>=1.0.1",
    # Jupyter
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    # Scrapping
    "requests==2.32.4",
    "beautifulsoup4>=4.10.0",
    "newspaper3k>=0.2.8",
    "lxml[html-clean]>=5.3.0",
    "gdeltdoc>=1.5.0",
    "lxml-html-clean>=0.2.2",
    # Pandas parquet support
    "pyarrow==20.0.0",
    # LLMs
    "tiktoken>=0.8.0",
    "groq>=0.11.0",
    "openai==1.82.0",
    "anthropic>=0.34.2",
    "litellm>=1.51.2",
    "boto3>=1.35.52",
    # Classification metrics
    "scikit-learn==1.7.1",
    # ROUGE score
    "evaluate>=0.4.3",
    "absl-py>=2.1.0",
    "rouge-score>=0.1.2",
    "deepmultilingualpunctuation>=1.0.1",
    # Plotting
    "plotly>=5.24.1",
    "kaleido>=0.2.1",
    "seaborn>=0.13.2",
    "streamlit>=1.40.0",
    "streamlit-aggrid>=1.0.5",
    # Developer tool
    "ruff>=0.7.2",
    # Create Excel file
    "openpyxl>=3.1.5",
    # Quote approximate matching
    "fuzzysearch>=0.7.3",
    # Text preprocessing (accents removal)
    "unidecode>=1.3.8",
    "accelerate==1.8.1",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.14",
    "aiosignal==1.4.0",
    "aiosqlite==0.21.0",
    "anyio==4.9.0",
    "attrs==25.3.0",
    "banks==2.1.2",
    "certifi==2025.7.14",
    "charset-normalizer==3.4.2",
    "colorama==0.4.6",
    "dataclasses-json==0.6.7",
    "datasets==4.0.0",
    "deprecated==1.2.18",
    "dill==0.3.8",
    "dirtyjson==1.0.8",
    "docker-pycreds==0.4.0",
    "filelock==3.18.0",
    "filetype==1.2.0",
    "frozenlist==1.7.0",
    "fsspec==2025.3.0",
    "greenlet==3.2.2",
    "griffe==1.7.3",
    "grpcio==1.74.0",
    "h11==0.16.0",
    "h2==4.2.0",
    "hf-xet==1.1.5",
    "hpack==4.1.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==0.34.3",
    "hyperframe==6.1.0",
    "jinja2==3.1.6",
    "jiter==0.9.0",
    "joblib==1.5.1",
    "jsonlines==4.0.0",
    "jsonpatch==1.33",
    "langchain==0.3.27",
    "langchain-core==0.3.72",
    "langchain-huggingface==0.3.1",
    "langchain-qdrant==0.2.0",
    "langchain-text-splitters==0.3.9",
    "langsmith==0.4.8",
    "llama-cloud==0.1.22",
    "llama-cloud-services==0.6.23",
    "llama-index==0.12.37",
    "llama-index-agent-openai==0.4.8",
    "llama-index-cli==0.4.1",
    "llama-index-core==0.12.37",
    "llama-index-embeddings-openai==0.3.1",
    "llama-index-indices-managed-llama-cloud==0.6.11",
    "llama-index-llms-openai==0.3.44",
    "llama-index-multi-modal-llms-openai==0.4.3",
    "llama-index-program-openai==0.3.1",
    "llama-index-question-gen-openai==0.3.0",
    "llama-index-readers-file==0.4.7",
    "llama-index-readers-llama-parse==0.4.0",
    "llama-parse==0.6.23",
    "markupsafe==3.0.2",
    "marshmallow==3.26.1",
    "mlx==0.25.2",
    "mlx-lm==0.24.1",
    "mlx-lm-lora==0.3.5",
    "mlx-optimizers==0.4.1",
    "multidict==6.6.3",
    "multiprocess==0.70.16",
    "mypy-extensions==1.1.0",
    "networkx==3.5",
    "numpy==2.3.2",
    "orjson==3.11.1",
    "packaging==25.0",
    "pandas==2.3.1",
    "peft==0.16.0",
    "pillow==11.3.0",
    "platformdirs==4.3.8",
    "portalocker==3.2.0",
    "propcache==0.3.2",
    "protobuf==6.31.1",
    "psutil==7.0.0",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pypdf==5.5.0",
    "pytz==2025.2",
    "qdrant-client==1.15.0",
    "regex==2025.7.31",
    "requests-toolbelt==1.0.0",
    "rerankers[flashrank]==0.10.0",
    "safetensors==0.5.3",
    "scipy==1.16.1",
    "sentence-transformers==5.0.0",
    "sentencepiece==0.2.0",
    "sentry-sdk==2.29.1",
    "setfit==1.1.2",
    "setproctitle==1.3.6",
    "setuptools==80.9.0",
    "six==1.17.0",
    "sqlalchemy==2.0.42",
    "striprtf==0.0.26",
    "sympy==1.14.0",
    "tenacity==9.1.2",
    "threadpoolctl==3.6.0",
    "tokenizers==0.21.4",
    "torch==2.7.1",
    "tqdm==4.67.1",
    "transformers==4.54.1",
    "trl==0.19.1",
    "typing-extensions==4.14.1",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "wand==0.6.13",
    "wandb==0.19.11",
    "wrapt==1.17.2",
    "yarl==1.20.1",
    "zstandard==0.23.0",
]
requires-python = ">=3.12"

# https://github.com/astral-sh/uv/issues/7703#issuecomment-2376674577
[tool.uv]
constraint-dependencies = ["kaleido!=0.2.1.post1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["climate_guard"]


[tool.black]
line-length = 100
target-version = ['py312']
