[project]
name = "climateguard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.1.1",
    "evaluate>=0.4.6",
    "numpy>=2.3.3",
    "openai>=1.108.1",
    "pandas>=2.3.2",
    "pydantic>=2.11.9",
    "sentencepiece>=0.2.1",
    "torch>=2.8.0",
    "transformers>=4.56.2",
]
