[project]
name = "misinfo-detector"
version = "0.1.0"
description = "Fine-tuned LLM climate misinformation detector with teacher distillation"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.1",
    "transformers>=4.51",
    "peft>=0.7",
    "bitsandbytes>=0.41",
    "trl>=0.7",
    "anthropic>=0.25",
    "datasets>=2.14",
    "trafilatura>=1.6",
    "requests>=2.31",
    "evaluate>=0.4",
    "scikit-learn>=1.3",
    "rapidfuzz>=3.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "huggingface-hub>=0.19",
    "jsonlines>=4.0",
    "wandb>=0.16",
    "tqdm>=4.66",
    "pandas>=2.0",
    "numpy>=1.24",
    "ruff>=0.15.12",
]

[project.optional-dependencies]
train = [
    "unsloth",
    "bitsandbytes>=0.41",
]
inference = [
    "vllm>=0.2",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
