[project]
name = "misinfo-detector"
version = "0.1.0"
description = "Fine-tuned LLM climate misinformation detector with teacher distillation"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.11",
    "transformers>=5.6",
    "peft>=0.19",
    "bitsandbytes>=0.49",
    "trl>=1.3",
    "anthropic>=0.97",
    "datasets>=4.8",
    "trafilatura>=2.0",
    "requests>=2.31",
    "evaluate>=0.4",
    "scikit-learn>=1.8",
    "rapidfuzz>=3.14",
    "pyyaml>=6.0",
    "python-dotenv>=1.2",
    "huggingface-hub>=1.12",
    "jsonlines>=4.0",
    "wandb>=0.26",
    "pypdf>=5.0",
    "tqdm>=4.67",
    "pandas>=3.0",
    "numpy>=2.4",
    "ruff>=0.15",
]

[project.optional-dependencies]
train = [
    "unsloth",
    "bitsandbytes>=0.49",
]
inference = [
    "vllm>=0.20",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
